build_v7.txt
warning: C:\Users\Star\OneDrive\Documents\Important\Projects\Rust NPM Package\crates\pulsar-server\Cargo.toml: `default-features` is ignored for tracing-subscriber, since `default-features` was not specified for `workspace.dependencies.tracing-subscriber`, this could become a hard error in the future
   Compiling http_server v0.1.0 (C:\Users\Star\OneDrive\Documents\Important\Projects\Rust NPM Package\crates\http-server)
warning: unused import: `error`
 --> crates\http-server\src\lib.rs:9:21
  |
9 | use tracing::{info, error, warn, debug};
  |                     ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: `{async fn body of signal::ctrl_c::ctrl_c()}` cannot be unpinned
   --> crates\http-server\src\lib.rs:141:13
    |
141 | /             tokio::select! {
142 | |                 _ = &mut shutdown_signal => {
143 | |                     info!("Graceful Shutdown Initiated: ­ƒøæ Draining active connections...");
...   |
179 | |             }
    | |             ^
    | |             |
    | |_____________unsatisfied trait bound
    |               required by a bound introduced by this call
    |
   ::: C:\Users\Star\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.50.0\src\signal\ctrl_c.rs:59:26
    |
 59 |   pub async fn ctrl_c() -> io::Result<()> {
    |                            -------------- within this `impl futures::Future<Output = Result<(), std::io::Error>>`
    |
    = help: within `impl futures::Future<Output = Result<(), std::io::Error>>`, the trait `Unpin` is not implemented for `{async fn body of signal::ctrl_c::ctrl_c()}`
    = note: consider using the `pin!` macro
            consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `impl futures::Future<Output = Result<(), std::io::Error>>`
   --> C:\Users\Star\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.50.0\src\signal\ctrl_c.rs:59:26
    |
 59 | pub async fn ctrl_c() -> io::Result<()> {
    |                          ^^^^^^^^^^^^^^
    = note: required for `&mut impl futures::Future<Output = Result<(), std::io::Error>>` to implement `futures::Future`
    = note: required for `&mut impl futures::Future<Output = Result<(), std::io::Error>>` to implement `std::future::IntoFuture`
    = note: this error originates in the macro `$crate::select` which comes from the expansion of the macro `tokio::select` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `{async fn body of signal::ctrl_c::ctrl_c()}` cannot be unpinned
   --> crates\http-server\src\lib.rs:141:13
    |
141 | /             tokio::select! {
142 | |                 _ = &mut shutdown_signal => {
143 | |                     info!("Graceful Shutdown Initiated: ­ƒøæ Draining active connections...");
...   |
179 | |             }
    | |             ^
    | |             |
    | |_____________unsatisfied trait bound
    |               required by a bound introduced by this call
    |
   ::: C:\Users\Star\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.50.0\src\signal\ctrl_c.rs:59:26
    |
 59 |   pub async fn ctrl_c() -> io::Result<()> {
    |                            -------------- within this `impl futures::Future<Output = Result<(), std::io::Error>>`
    |
    = help: within `impl futures::Future<Output = Result<(), std::io::Error>>`, the trait `Unpin` is not implemented for `{async fn body of signal::ctrl_c::ctrl_c()}`
    = note: consider using the `pin!` macro
            consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `impl futures::Future<Output = Result<(), std::io::Error>>`
   --> C:\Users\Star\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.50.0\src\signal\ctrl_c.rs:59:26
    |
 59 | pub async fn ctrl_c() -> io::Result<()> {
    |                          ^^^^^^^^^^^^^^
    = note: required for `&mut impl futures::Future<Output = Result<(), std::io::Error>>` to implement `futures::Future`
    = note: this error originates in the macro `$crate::select` which comes from the expansion of the macro `tokio::select` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `{async fn body of signal::ctrl_c::ctrl_c()}` cannot be unpinned
   --> crates\http-server\src\lib.rs:141:13
    |
141 | /             tokio::select! {
142 | |                 _ = &mut shutdown_signal => {
143 | |                     info!("Graceful Shutdown Initiated: ­ƒøæ Draining active connections...");
...   |
179 | |             }
    | |_____________^ unsatisfied trait bound
    |
   ::: C:\Users\Star\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.50.0\src\signal\ctrl_c.rs:59:26
    |
 59 |   pub async fn ctrl_c() -> io::Result<()> {
    |                            -------------- within this `impl futures::Future<Output = Result<(), std::io::Error>>`
    |
    = help: within `impl futures::Future<Output = Result<(), std::io::Error>>`, the trait `Unpin` is not implemented for `{async fn body of signal::ctrl_c::ctrl_c()}`
    = note: consider using the `pin!` macro
            consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `impl futures::Future<Output = Result<(), std::io::Error>>`
   --> C:\Users\Star\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.50.0\src\signal\ctrl_c.rs:59:26
    |
 59 | pub async fn ctrl_c() -> io::Result<()> {
    |                          ^^^^^^^^^^^^^^
    = note: required for `&mut impl futures::Future<Output = Result<(), std::io::Error>>` to implement `futures::Future`
    = note: this error originates in the macro `$crate::select` which comes from the expansion of the macro `tokio::select` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
warning: `http_server` (lib) generated 1 warning
error: could not compile `http_server` (lib) due to 3 previous errors; 1 warning emitted
